// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/env .getConfig(env) supports GitHub custom endpoint 1`] = `
Object {
  "endpoints": Array [],
}
`;

exports[`config/env .getConfig(env) supports GitHub custom endpoint and github.com 1`] = `
Object {
  "endpoints": Array [
    Object {
      "platform": "github",
      "token": "public",
    },
    Object {
      "endpoint": "endpoint",
      "platform": "github",
      "token": "token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports GitHub token 1`] = `
Object {
  "endpoints": Array [
    Object {
      "endpoint": undefined,
      "platform": "github",
      "token": "token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports GitLab custom endpoint 1`] = `
Object {
  "endpoints": Array [
    Object {
      "endpoint": "endpoint",
      "platform": "gitlab",
      "token": "token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports GitLab token 1`] = `
Object {
  "endpoints": Array [
    Object {
      "endpoint": undefined,
      "platform": "gitlab",
      "token": "token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports VSTS 1`] = `
Object {
  "endpoints": Array [
    Object {
      "endpoint": "endpoint",
      "platform": "vsts",
      "token": undefined,
    },
  ],
}
`;
